# collect-weather

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh  run_tests.sh
tests/: conftest.py  test_functional.py  test_utils.py
tests/data/: test_city_ids.json
weather_api/app/: db.py  main.py  models.py  settings.py  utils.py
weather_api/data/: all_city_ids.json
