[tool.poetry]
name = "weather-api"
version = "0.1.0"
description = ""
authors = ["Yago Randerson <yagoranderson@yahoo.com.br>"]
readme = "README.md"
packages = [{include = "weather_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
rq = "^1.11.1"
requests = "^2.28.1"
pony = "^0.7.16"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
